--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
     background-repeat: no-repeat;
     background-image: url(../img/main_background.png);
     padding-bottom: 150px;
+    background-size: cover;
+    background-position: center;
 }
 
 .header {
@@ -23,6 +25,8 @@
     padding-top: 30px;
     align-items: center;
     margin-bottom: 110px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .header p {
@@ -34,6 +38,7 @@
     text-align: center;
     color: #FFFFFF;
     max-width: 236px;
+    margin-left: 160px;
 }
 
 .header__tel {
@@ -44,6 +49,7 @@
     color: #FFFFFF;
     text-decoration: none;
     margin-left: 11px;
+    white-space: nowrap;
 }
 
 .header ul {
@@ -89,6 +95,8 @@
 .description {
     max-width: 1160px;
     margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .description h1 {
@@ -125,8 +133,20 @@
     padding-bottom: 70px;
 }
 
+.mockup__mobile {
+    display: none;
+}
+
+.mockup__container {
+    max-width: 1536px;
+    margin: auto;
+    padding-right: 28px;
+    padding-left: 20px;
+}
+
 .mockups__img {
     margin-top: -130px;
+    width: 100%;
 }
 
 .opportunities {
@@ -134,6 +154,8 @@
 }
 
 .opportunities__container {
+    padding-left: 20px;
+    padding-right: 20px;
     max-width: 979px;
     margin: auto;
     padding-bottom: 40px;
@@ -269,10 +291,12 @@
     background-color: transparent;
     background-repeat: no-repeat;
     background-image: url(../img/example_background.png);
-    background-size: 100%;
+    background-size: 100% 100%;
 }
 
 .benefits__container {
+    padding-left: 20px;
+    padding-right: 20px;
     max-width: 1160px;
     margin: auto;
 }
@@ -306,6 +330,9 @@
 
 .benefits__item {
     padding-top: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-bottom: 15px;
     background: #FFFFFF;
     box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
     border-radius: 7px;
@@ -933,11 +960,13 @@
 .footer__background {
     background-color: transparent;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
     background-image: url(../img/footer_background.png);
 }
 
 .footer__container {
+    padding-left: 20px;
+    padding-right: 20px;
     max-width: 1160px;
     margin: auto;
     display: flex;
@@ -974,4 +1003,271 @@
     color: #FFFFFF;
     text-decoration: none;
     margin-left: 12px;
+}
+
+@media(max-width: 1160px) {
+    .benefits__list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media(max-width: 1024px) {
+    .header p {
+        margin-left: 50px;
+    }
+
+    .main__background {
+        background-position: -500px;
+    }
+}
+
+@media(max-width: 960px) {
+
+    .description h1 {
+        max-width: 470px;
+    }
+
+    .main__background {
+        background-position: -700px;
+    }
+
+    .opportunities__card__left__seo {
+        max-width: 500px;
+    }
+}
+
+@media(max-width: 850px) {
+
+    .footer__container p {
+        text-align: center;
+    }
+
+    .footer__container {
+        padding-top: 15px;
+        flex-direction: column-reverse;
+    }
+
+    .opportunities__card__img--seo {
+        background-position: 22px;
+    }
+
+    .opportunities__card__seo {
+        flex-direction: column-reverse;
+    }
+
+    .opportunities__card {
+        flex-direction: column;
+    }
+
+    .opportunities__card__left p {
+        max-width: 100%;
+    }
+
+    .opportunities__card__left__seo {
+        max-width: 100%;
+    }
+
+    .opportunities__card:nth-child(even) {
+        flex-direction: column-reverse;
+    }
+
+    .header p {
+        display: none;
+    }
+}
+
+@media(max-width: 820px) {
+
+    .benefits__list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .mockup__container {
+        display: none;
+    }
+
+    .mockup__mobile {
+        margin-top: -100px;
+        padding-right: 20px;
+        padding-left: 20px;
+        display: grid;
+        grid-template-columns: repeat(2 ,1fr);
+        column-gap: 15px;
+        row-gap: 15px;
+    }
+
+    .mockups__mobile {
+        width: 80%;
+        margin-top: -50px;
+    }
+
+    .mockups__tablet {
+        width: 100%;
+        margin-top: -50px;
+    }
+
+    .mockups__desktop {
+        grid-row-start: 2;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        width: 100%;
+    }
+
+    .main__background {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: right;
+        background-image: url(../img/main_background_mob.png);
+    }
+}
+
+@media(max-width: 720px) {
+
+    .description h1 {
+        font-size: 40px;
+        line-height: 40px;
+    }
+
+    .description p {
+        font-size: 22px;
+        line-height: 22px;
+    }
+
+    .description h1 {
+        max-width: 440px;
+    }
+}
+
+@media(max-width: 570px) {
+
+    .main__background {
+        background-position: right -20px;
+    }
+
+    .description h1 {
+        font-size: 32px;
+        line-height: 35px;
+    }
+
+    .description p {
+        font-size: 18px;
+        line-height: 20px;
+    }
+
+    .header__tel {
+        display: none;
+    }
+}
+
+@media(max-width: 480px) {
+
+    .footer__tel {
+        font-size: 18px;
+    }
+
+    .benefits__item p {
+        max-width: 100%;
+    }
+
+    .benefits__item {
+        justify-content: center;
+    }
+
+    .benefits__list {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media(max-width: 425px) {
+
+    .footer__container {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .benefits__container h2 {
+        font-size: 20px;
+        line-height: 22px;
+    }
+
+    .benefits__bottom--txt {
+        font-size: 16px;
+        line-height: 18px;
+    }
+
+    .benefits__container {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .opportunities__card__img--record {
+        background-size: 280px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .opportunities__card__img--freeclients {
+        background-size: 280px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .opportunities__card__img--promotion {
+        background-size: 280px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .opportunities__card__img--load {
+        background-size: 280px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .opportunities__card__img--control {
+        background-size: 280px;
+        width: 280px;
+        height: 280px;
+    }
+    
+    .opportunities__card__img--seo {
+        background-size: 280px;
+        width: 280px;
+        height: 490px;
+    }
+
+    .opportunities__container {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .opportunities__container h2{
+        font-size: 20px;
+        line-height: 22px;
+    }
+
+    .description {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .main__background {
+        background-image: url(../img/main_background_mob425.png);
+        background-position: center;
+    }
+
+    .description h1 {
+        font-size: 26px;
+        line-height: 28px;
+    }
+
+    .description p {
+        font-size: 18px;
+        line-height: 18px;
+    }
+
+    .header {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
