--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 @font-face {
-    font-family: "DINPro";
-    src: url("../fonts/DINPro.woff2");
-    font-style: normal;
-    font-weight: normal;
+	font-family: 'DINPro';
+	src: url('../fonts/din_pro_condensed_regular.eot'); /* IE 9 Compatibility Mode */
+	src: url('../fonts/din_pro_condensed_regular.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+		url('../fonts/din_pro_condensed_regular.woff2') format('woff2'), /* Super Modern Browsers */
+		url('../fonts/din_pro_condensed_regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+		url('../fonts/din_pro_condensed_regular.ttf') format('truetype'), /* Safari, Android, iOS */
+		url('../fonts/din_pro_condensed_regular.svg#din_pro_condensed_regular') format('svg'); /* Chrome < 4, Legacy iOS */
 }
 
 html {
@@ -31,7 +34,7 @@ html {
     justify-content: space-between;
     padding-top: 30px;
     align-items: center;
-    margin-bottom: 110px;
+    margin-bottom: 100px;
     padding-right: 20px;
     padding-left: 20px;
 }
@@ -110,14 +113,14 @@ html {
     margin: 0;
     font-family: 'DINPro', sans-serif;
     font-style: normal;
-    font-weight: 400;
-    font-size: 45px;
+    font-weight: 800;
+    font-size: 50px;
     line-height: 50px;
     letter-spacing: 0.01em;
     text-transform: uppercase;
     color: #FFFFFF;
-    max-width: 700px;
-    margin-bottom: 40px;
+    max-width: 500px;
+    margin-bottom: 37px;
 }
 
 .description__logo--helix {
@@ -137,7 +140,7 @@ html {
 .mockup {
     background: #f3fcff;
     text-align: center;
-    padding-bottom: 70px;
+    padding-bottom: 65px;
 }
 
 .mockup__mobile {
@@ -152,7 +155,7 @@ html {
 }
 
 .mockups__img {
-    margin-top: -130px;
+    margin-top: -105px;
     width: 100%;
 }
 
@@ -180,10 +183,10 @@ html {
     font-family: 'Manrope';
     font-style: normal;
     font-weight: 700;
-    font-size: 25px;
+    font-size: 27px;
     line-height: 34px;
     color: #13345E;
-    margin-bottom: 30px;
+    margin-bottom: 55px;
 }
 
 .opportunities__container h2::after {
@@ -196,7 +199,7 @@ html {
     left: 0;
     right: 0;
     margin: auto;
-    bottom: -12px;
+    bottom: -16px;
 }
 
 .rate__price__bottom__mob {
@@ -208,7 +211,7 @@ html {
     font-style: normal;
     font-weight: 500;
     font-size: 25px;
-    line-height: 34px;
+    line-height: 25px;
     color: #13345E;
     margin-bottom: 15px;
 }
@@ -219,7 +222,8 @@ html {
     font-weight: 400;
     font-size: 18px;
     color: #333333;
-    max-width: 500px;
+    max-width: 510px;
+    line-height: 26px;
 }
 
 .opportunities__card__img--seo {
@@ -237,6 +241,7 @@ html {
     align-items: center;
     max-width: 980px;
     margin: auto;
+    margin-bottom: 45px;
 }
 
 .opportunities__card__left__seo {
@@ -246,6 +251,11 @@ html {
     font-weight: 400;
     font-size: 18px;
     color: #333333;
+}
+
+.opportunities__card__left__seo h3 {
+    font-size: 25px;
+    color: #13345E;
 }
 
 .opportunities__seo__txt {
@@ -1229,13 +1239,14 @@ html {
         font-size: 40px;
         line-height: 40px;
         margin-bottom: 20px;
-        max-width: 440px;
+        max-width: 340px;
     }
 
     .description p {
         font-size: 22px;
         line-height: 22px;
         margin-bottom: 20px;
+        max-width: 290px;
     }
 }
 
@@ -1490,6 +1501,7 @@ html {
     .description h1 {
         font-size: 26px;
         line-height: 28px;
+        max-width: 300px;
     }
 
     .description p {
