--- a/css/style.css
+++ b/css/style.css
@@ -1385,6 +1385,10 @@ html {
         width: 100%;
         margin-top: -100px;
     }
+
+    .main__background {
+        padding-bottom: 100px;
+    }
 }
 
 @media(max-width: 500px) {
