--- a/css/style.css
+++ b/css/style.css
@@ -1332,6 +1332,28 @@ html {
     }
 }
 
+@media(max-width: 600px) {
+    
+    .mockup__container {
+        display: none;
+    }
+
+    .mockup__mobile {
+        padding-right: 20px;
+        padding-left: 20px;
+        display: block;
+    }
+
+    .mockups__desktop {
+        width: 100%;
+        margin-top: -53px;
+    }
+
+    .main__background {
+        padding-bottom: 50px;
+    }
+}
+
 @media(max-width: 590px) {
     .example__get__list__item {
         min-height: 132px;
@@ -1368,26 +1390,6 @@ html {
 
     .example__get__list__item {
         min-height: auto;
-    }
-
-    .mockup__container {
-        display: none;
-    }
-
-    .mockup__mobile {
-        
-        padding-right: 20px;
-        padding-left: 20px;
-        display: block;
-    }
-
-    .mockups__desktop {
-        width: 100%;
-        margin-top: -100px;
-    }
-
-    .main__background {
-        padding-bottom: 100px;
     }
 }
 
